[2022-40][WIP] Start of Hirslanden Salem 2018 notebook.

--- a/src/revised_case_normalization/Hirslanden_Salem_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Salem_2018_normalization.ipynb
@@ -57,7 +57,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "7afa747d-1bf5-4644-9e9e-847a96e08dc2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -82,7 +86,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "9b6a51f2-b09d-4f13-8233-39e382bd56df",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -256,7 +264,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "d08a37ce-31bb-48f8-b97b-a2ffd7940d44",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
