[2022-40] [WIP] Little refactoring of Hirlanden Salem 2017 and create a model notebook

--- a/src/revised_case_normalization/model_normalization.ipynb
+++ b/src/revised_case_normalization/model_normalization.ipynb
@@ -1844,19 +1844,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b207083d",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# select the relevent columns from revised data\n",
     "\n",
     "revised_case_d2d_subset = df_revised_case_d2d[COL_SUBSET_FROM_REVISED_CASES]\n",
     "revised_case_d2d_subset.head()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
