[2022-40] Created a new BFS database query and solved the problem of different case_ids and modification of the matching criteria and improved the model_normalization notebook

--- a/src/revised_case_normalization/Hirslanden_Zurich_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Zurich_2017_normalization.ipynb
@@ -1101,7 +1101,7 @@
     "    \n",
     "revised_case_db = bfs_db.get_bfs_cases_by_ids(revised_case_id_pad0)\n",
     "\n",
-    "print(f'{len(revised_case_db)} of {len(revised_case_id)} cases were matched when padding 00 in front of case_id')"
+    "print(f'{len(revised_case_db)} of {len(revised_case_id)} cases were matched when padding 00 in front of case_id')\n"
    ]
   },
   {
