[2022-40] [WIP] still need to work on LINDE 2018

--- a/src/revised_case_normalization/Hirslanden_Zurich_2019_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Zurich_2019_normalization.ipynb
@@ -453,35 +453,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caec5c29-1e18-4f90-98de-fe9e0bd302ab",
+   "cell_type": "markdown",
+   "id": "f4b13f61-a6d4-4e1c-b188-a27ad7c4bb2e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Check if there are duplicated case_ids, if yes, delete them"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "c275f35d-c024-463b-b3ff-d794edefd662",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "55"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'revised_case_id_stripped' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Delete duplicated case_id in this hospital.\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m revised_case_id_stripped_set \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(revised_case_id_stripped)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(revised_case_id_stripped) \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlen\u001b[39m(revised_case_id_stripped_set):\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThere are duplicated case_ids in the revised case.\u001b[39m\u001b[38;5;124m'\u001b[39m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'revised_case_id_stripped' is not defined"
+     ]
     }
    ],
    "source": [
     "# Delete duplicated case_id in this hospital.\n",
     "\n",
-    "revised_case_id_stripped = set(revised_case_id_stripped)\n",
-    "len(revised_case_id_stripped)"
+    "revised_case_id_stripped_set = set(revised_case_id_stripped)\n",
+    "if len(revised_case_id_stripped) > len(revised_case_id_stripped_set):\n",
+    "    print(f'There are duplicated case_ids in the revised case.' )"
    ]
   },
   {
@@ -718,8 +720,8 @@
     }
    ],
    "source": [
-    "# match to the database\n",
-    "revised_case_db = bfs_db.get_bfs_cases_by_ids_no_pad0(list(revised_case_id_stripped))\n",
+    "# match to the database and retrieve data from database using revised\n",
+    "revised_case_db = bfs_db.get_bfs_cases_by_ids_no_pad0(list(revised_case_id_stripped_set))\n",
     "revised_case_db.head()"
    ]
   },
@@ -771,11 +773,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_revised_case_d2d['case_id_stripped'].apply(tuple)\n",
+    "# delete duplicated cases in the revised cases\n",
     "\n",
-    "# now this runs with no error\n",
+    "df_revised_case_d2d['case_id_stripped'].apply(tuple) # make sure the drop_duplicates works\n",
+    "\n",
     "df_revised_case_d2d.drop_duplicates(subset=['case_id_stripped'], keep='last', inplace=True)\n",
-    "assert len(revised_case_id_stripped) == df_revised_case_d2d.shape[0]"
+    "assert len(revised_case_id_stripped) == df_revised_case_d2d.shape[0] # make sure all cases are deleted\n",
+    "print(f'The number of cases after deleting the duplicated cases is: {df_revised_case_d2d.shape[0]}')\n"
    ]
   },
   {
