[2022-42] Fixed logic in validating CHOP codes

--- a/src/revised_case_normalization/Hirslanden_Aarau_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Aarau_2017_normalization.ipynb
@@ -105,8 +105,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-18 14:01:32.317 | INFO     | py.normalize:normalize:46 - Read 14 cases for Hirslanden Aarau 2017\n",
-      "2022-10-18 14:01:32.320 | INFO     | py.normalize:normalize:61 - TYPES:\n",
+      "2022-10-18 14:51:10.169 | INFO     | py.normalize:normalize:46 - Read 14 cases for Hirslanden Aarau 2017\n",
+      "2022-10-18 14:51:10.172 | INFO     | py.normalize:normalize:64 - TYPES:\n",
       "case_id             string\n",
       "patient_id          string\n",
       "gender              string\n",
@@ -122,44 +122,60 @@
       "added_chops         string\n",
       "removed_chops       string\n",
       "dtype: object\n",
-      "2022-10-18 14:01:32.326 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 0: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.326 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 1: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.327 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 2: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.328 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 3: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.328 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 5: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.329 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 8: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.331 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 9: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.332 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 10: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.333 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 11: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.334 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 12: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.334 | DEBUG    | src.utils.dataframe_utils:_validate_icd_codes:56 - row 13: discarded ICDs after validation {''}\n",
-      "2022-10-18 14:01:32.336 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 1: discarded duplicated and invalid CHOP entries after validation {'948x40::20170103', '99b713::20161225'}\n",
-      "2022-10-18 14:01:32.337 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 2: discarded duplicated and invalid CHOP entries after validation {'004b1a:L:20170210'}\n",
-      "2022-10-18 14:01:32.338 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 3: discarded duplicated and invalid CHOP entries after validation {'81525b:R:20170518', '948x40::20170519'}\n",
-      "2022-10-18 14:01:32.339 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 4: discarded duplicated and invalid CHOP entries after validation {'403x29:R:20170621'}\n",
-      "2022-10-18 14:01:32.340 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 5: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.340 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 6: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.341 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 7: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.342 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 8: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.342 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 9: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.344 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 10: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.345 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 11: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.347 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 12: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.349 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 13: discarded duplicated and invalid CHOP entries after validation {'99b712::20170705', '948x40::20170710'}\n",
-      "2022-10-18 14:01:32.351 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 0: discarded duplicated and invalid CHOP entries after validation {'009031::20170106'}\n",
-      "2022-10-18 14:01:32.352 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 1: discarded duplicated and invalid CHOP entries after validation {'99B713::20161225', '948X40::20170103'}\n",
-      "2022-10-18 14:01:32.353 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 2: discarded duplicated and invalid CHOP entries after validation {'004B1A:L:20170210'}\n",
-      "2022-10-18 14:01:32.354 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 3: discarded duplicated and invalid CHOP entries after validation {'948X40::20170519', '81525B:R:20170518'}\n",
-      "2022-10-18 14:01:32.354 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 4: discarded duplicated and invalid CHOP entries after validation {'403X29:R:20170621'}\n",
-      "2022-10-18 14:01:32.355 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 5: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.356 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 6: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.356 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 7: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.357 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 8: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.357 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 9: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.358 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 10: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.359 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 11: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.360 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 12: discarded duplicated and invalid CHOP entries after validation {''}\n",
-      "2022-10-18 14:01:32.361 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:94 - row 13: discarded duplicated and invalid CHOP entries after validation {'99B712::20170705', '948X40::20170710'}\n"
+      "2022-10-18 14:51:10.182 | INFO     | py.normalize:normalize:78 - Validating ICD codes in added_icds ...\n",
+      "2022-10-18 14:51:10.185 | INFO     | py.normalize:normalize:81 - Validating ICD codes in removed_icds ...\n",
+      "2022-10-18 14:51:10.188 | INFO     | py.normalize:normalize:84 - Validating CHOP codes in added_chops ...\n",
+      "2022-10-18 14:51:10.190 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 1: discarded CHOPs after validation {'99B713::20161225', '948X40::20170103'}\n",
+      "2022-10-18 14:51:10.191 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 2: discarded CHOPs after validation {'004B1A:L:20170210'}\n",
+      "2022-10-18 14:51:10.191 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 3: discarded CHOPs after validation {'81525B:R:20170518', '948X40::20170519'}\n",
+      "2022-10-18 14:51:10.192 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 4: discarded CHOPs after validation {'403X29:R:20170621'}\n",
+      "2022-10-18 14:51:10.193 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 13: discarded CHOPs after validation {'948X40::20170710', '99B712::20170705'}\n",
+      "2022-10-18 14:51:10.196 | INFO     | py.normalize:normalize:87 - Validating CHOP codes in removed_chops ...\n",
+      "2022-10-18 14:51:10.198 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 0: discarded CHOPs after validation {'009031::20170106'}\n",
+      "2022-10-18 14:51:10.198 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 1: discarded CHOPs after validation {'99B713::20161225', '948X40::20170103'}\n",
+      "2022-10-18 14:51:10.201 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 2: discarded CHOPs after validation {'004B1A:L:20170210'}\n",
+      "2022-10-18 14:51:10.202 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 3: discarded CHOPs after validation {'81525B:R:20170518', '948X40::20170519'}\n",
+      "2022-10-18 14:51:10.203 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 4: discarded CHOPs after validation {'403X29:R:20170621'}\n",
+      "2022-10-18 14:51:10.204 | DEBUG    | src.utils.dataframe_utils:_validate_chop_codes:85 - row 13: discarded CHOPs after validation {'948X40::20170710', '99B712::20170705'}\n",
+      "2022-10-18 14:51:10.207 | INFO     | py.normalize:normalize:92 - Validating duplication of CHOP codes due to different casing ...\n",
+      "2022-10-18 14:51:10.210 | INFO     | py.normalize:normalize:98 - Validating duplication of PD in different lists ...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            added_icds removed_icds                            added_chops  \\\n",
+      "0              [E1140]           []                       [80051d, 815255]   \n",
+      "1               [B370]           []   [99b713::20161225, 948x40::20170103]   \n",
+      "2               [F101]           []                    [004b1a:L:20170210]   \n",
+      "3              [L8914]           []  [81525b:R:20170518, 948x40::20170519]   \n",
+      "4              [E1191]      [E1190]                    [403x29:R:20170621]   \n",
+      "5              [M4196]           []                                     []   \n",
+      "6              [K3182]      [K5581]                                     []   \n",
+      "7   [F023, F338, F051]  [F03, F328]                                     []   \n",
+      "8                [R15]           []                                     []   \n",
+      "9               [A099]           []                                     []   \n",
+      "10             [J9580]           []                                     []   \n",
+      "11               [J91]           []                                     []   \n",
+      "12              [A099]           []                                     []   \n",
+      "13              [I513]           []   [99b712::20170705, 948x40::20170710]   \n",
+      "\n",
+      "                            removed_chops  \n",
+      "0                      [009031::20170106]  \n",
+      "1    [99B713::20161225, 948X40::20170103]  \n",
+      "2                     [004B1A:L:20170210]  \n",
+      "3   [81525B:R:20170518, 948X40::20170519]  \n",
+      "4                     [403X29:R:20170621]  \n",
+      "5                                      []  \n",
+      "6                                      []  \n",
+      "7                                      []  \n",
+      "8                                      []  \n",
+      "9                                      []  \n",
+      "10                                     []  \n",
+      "11                                     []  \n",
+      "12                                     []  \n",
+      "13   [99B712::20170705, 948X40::20170710]  \n"
      ]
     }
    ],
